tenzir/integration/data/reference/parser/test_multiline_operators/step_00.ref
error: expected one of: lpar, identifier, this_, lbrace, string, integer
 --> /dev/stdin:1:5
  |
1 | a b,
  |     ^ got newline
  |